--- a/PasswordManagerMainWindow/Auth/AuthStyles.xaml
+++ b/PasswordManagerMainWindow/Auth/AuthStyles.xaml
@@ -1,5 +1,44 @@
 ﻿<ResourceDictionary xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
                     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml">
+
+    <SolidColorBrush x:Key="CloseAppButton.Static.Background" Color="Transparent"/>
+    <SolidColorBrush x:Key="CloseAppButton.IsMouseOver.Background" Color="#99aab5"/>
+    <SolidColorBrush x:Key="CloseAppButton.IsPressed.Background" Color="#7289da"/>
+
+    <SolidColorBrush x:Key="ErrorAuth.Static.Foreground" Color="Red"/>
+
+    <SolidColorBrush x:Key="SubmitButton.Static.Background" Color="#7289da"/>
+    <SolidColorBrush x:Key="SubmitButton.IsPressed.Background" Color="#99aab5"/>
+    <SolidColorBrush x:Key="SubmitButton.Text.Foreground" Color="White"/>
+
+    <SolidColorBrush x:Key="TextBoxAuth.Static.Border.Background" Color="White"/>
+    <SolidColorBrush x:Key="TextBoxAuth.Static.Border.BorderBrush" Color="LightGray"/>
+    <SolidColorBrush x:Key="TextBoxAuth.IsMouseOver.Border.BorderBrush" Color="LightGray"/>
+    <SolidColorBrush x:Key="TextBoxAuth.IsFocused.Border.BorderBrush" Color="#7289da"/>
+    <SolidColorBrush x:Key="TextBoxAuth.Static.BorderBrush" Color="Black"/>
+
+    <SolidColorBrush x:Key="PswdBoxAuth.Static.Border.Background" Color="White"/>
+    <SolidColorBrush x:Key="PswdBoxAuth.Static.Border.BorderBrush" Color="LightGray"/>
+    <SolidColorBrush x:Key="PswdBoxAuth.IsMouseOver.Border.BorderBrush" Color="LightGray"/>
+    <SolidColorBrush x:Key="PswdBoxAuth.IsFocused.Border.BorderBrush" Color="#7289da"/>
+    <SolidColorBrush x:Key="PswdBoxAuth.Static.BorderBrush" Color="Black"/>
+
+    <SolidColorBrush x:Key="PasswordCompexityRectangle.Static.Fill" Color="#EBEBEB"/>
+    <SolidColorBrush x:Key="PasswordCompexityRectangle.Static.Stroke" Color="#C6C6C6"/>
+
+    <LinearGradientBrush x:Key="Gradient.Static.Fill" StartPoint="0,1" EndPoint="0,0">
+        <GradientStop Color="#3A1C71" Offset="0"/>
+        <GradientStop Color="#D76D77" Offset="0.5"/>
+        <GradientStop Color="#FFAF7B" Offset="1"/>
+    </LinearGradientBrush>
+
+    <SolidColorBrush x:Key="OptionMark.Static.Background" Color="#FFFFFFFF"/>
+    <SolidColorBrush x:Key="OptionMark.Static.Border" Color="#7289da"/>
+    <SolidColorBrush x:Key="OptionMark.Pressed.Background" Color="#7289da"/>
+    <SolidColorBrush x:Key="OptionMark.Pressed.Border" Color="#7289da"/>
+    <SolidColorBrush x:Key="OptionMark.Pressed.Glyph" Color="White"/>
+    <SolidColorBrush x:Key="OptionMark.Static.Glyph" Color="White"/>
+ 
     
     <Style TargetType="Button" x:Key="CloseApp">
         <Style.Setters>
@@ -19,21 +58,18 @@
                                        FontFamily="Segoe MDL2 Assets"
                                        Foreground="Black"
                                        FontSize="16"/>
-
                         </Grid>
                     </ControlTemplate>
                 </Setter.Value>
             </Setter>
-            
-            <Setter Property="Background" Value="Transparent"/>
+            <Setter Property="Background" Value="{StaticResource CloseAppButton.Static.Background}"/>
         </Style.Setters>
-
         <Style.Triggers>
             <Trigger Property="IsMouseOver" Value="True">
-                <Setter Property="Background" Value="	#99aab5"/>
+                <Setter Property="Background" Value="{StaticResource CloseAppButton.IsMouseOver.Background}"/>
             </Trigger>
             <Trigger Property="IsPressed" Value="True">
-                <Setter Property="Background" Value="#7289da"/>
+                <Setter Property="Background" Value="{StaticResource CloseAppButton.IsPressed.Background}"/>
             </Trigger>
         </Style.Triggers>
     </Style>
@@ -41,7 +77,7 @@
 
     <Style x:Key="ErrorAuth" TargetType="TextBlock">
         <Style.Setters>
-            <Setter Property="Foreground" Value="Red"/>
+            <Setter Property="Foreground" Value="{StaticResource ErrorAuth.Static.Foreground}"/>
             <Setter Property="FontSize" Value="14"/>
             <Setter Property="FontFamily" Value="Global Sans Serif"/>
             <Setter Property="VerticalAlignment" Value="Top"/>
@@ -50,8 +86,8 @@
             <Setter Property="Visibility" Value="Hidden"/>
         </Style.Setters>
     </Style>
-    
-    
+
+
     <Style x:Key="Submit" TargetType="Button">
         <Style.Setters>
             <Setter Property="Template">
@@ -65,23 +101,19 @@
                             Width="{TemplateBinding Width}"
                             CornerRadius="25"
                             BorderThickness="0">
-
                             <TextBlock Text="{TemplateBinding Property=Content}"
                                        VerticalAlignment="Center"
                                        HorizontalAlignment="Center"
                                        FontFamily="Global Sans Serif"
                                        Foreground="White"
                                        FontSize="18"/>
-
                         </Border>
                     </ControlTemplate>
                 </Setter.Value>
             </Setter>
-            
             <Setter Property="Background" Value="#7289da"/>
             <Setter Property="HorizontalAlignment" Value="Left"/>
             <Setter Property="VerticalAlignment" Value="Center"/>
-            
         </Style.Setters>
         <Style.Triggers>
             <Trigger Property="IsPressed" Value="True">
@@ -93,59 +125,63 @@
         </Style.Triggers>
     </Style>
 
-    
+
     <Style x:Key="TextBoxAuth" TargetType="TextBox">
         <Style.Setters>
             <Setter Property="OverridesDefaultStyle" Value="True"></Setter>
             <Setter Property="Template">
                 <Setter.Value>
                     <ControlTemplate TargetType="TextBox">
-                        <Border x:Name="border" BorderThickness="2" CornerRadius="5" Background="White" BorderBrush="LightGray">
+                        <Border x:Name="border" BorderThickness="2" 
+                                CornerRadius="5" Background="{StaticResource TextBoxAuth.Static.Border.Background}" 
+                                BorderBrush="{StaticResource TextBoxAuth.Static.Border.BorderBrush}">
                             <ScrollViewer x:Name="PART_ContentHost" Padding="{TemplateBinding Padding}" />
                         </Border>
                         <ControlTemplate.Triggers>
                             <Trigger Property="IsMouseOver" Value="True">
-                                <Setter TargetName="border" Property="BorderBrush" Value="LightGray"></Setter>
+                                <Setter TargetName="border" Property="BorderBrush" Value="{StaticResource TextBoxAuth.IsMouseOver.Border.BorderBrush}"></Setter>
                             </Trigger>
                             <Trigger Property="IsFocused" Value="True">
-                                <Setter Property="BorderBrush" TargetName="border" Value="#7289da"/>
+                                <Setter Property="BorderBrush" TargetName="border" Value="{StaticResource TextBoxAuth.IsFocused.Border.BorderBrush}"/>
                             </Trigger>
                         </ControlTemplate.Triggers>
                     </ControlTemplate>
                 </Setter.Value>
             </Setter>
-            
+
             <Setter Property="Padding" Value="5"/>
             <Setter Property="FontFamily" Value="Global Sans Serif"/>
             <Setter Property="BorderThickness" Value="2"/>
             <Setter Property="VerticalContentAlignment" Value="Center"/>
             <Setter Property="FontSize" Value="16"/>
-            <Setter Property="BorderBrush" Value="Black"/>
+            <Setter Property="BorderBrush" Value="{StaticResource TextBoxAuth.Static.BorderBrush}"/>
         </Style.Setters>
     </Style>
     
-
+    
     <Style x:Key="PswdBoxAuth" TargetType="PasswordBox">
         <Style.Setters>
             <Setter Property="OverridesDefaultStyle" Value="True"></Setter>
             <Setter Property="Template">
                 <Setter.Value>
                     <ControlTemplate TargetType="PasswordBox">
-                        <Border x:Name="border" BorderThickness="2" CornerRadius="5" Background="White" BorderBrush="LightGray">
+                        <Border x:Name="border" BorderThickness="2" 
+                                CornerRadius="5" Background="{StaticResource PswdBoxAuth.Static.Border.Background}" 
+                                BorderBrush="{StaticResource PswdBoxAuth.Static.Border.BorderBrush}">
                             <ScrollViewer x:Name="PART_ContentHost" Padding="{TemplateBinding Padding}" />
                         </Border>
                         <ControlTemplate.Triggers>
                             <Trigger Property="IsMouseOver" Value="True">
-                                <Setter TargetName="border" Property="BorderBrush" Value="LightGray"></Setter>
+                                <Setter TargetName="border" Property="BorderBrush" Value="{StaticResource PswdBoxAuth.IsMouseOver.Border.BorderBrush}"></Setter>
                             </Trigger>
                             <Trigger Property="IsFocused" Value="True">
-                                <Setter Property="BorderBrush" TargetName="border" Value="#7289da"/>
+                                <Setter Property="BorderBrush" TargetName="border" Value="{StaticResource PswdBoxAuth.IsFocused.Border.BorderBrush}"/>
                             </Trigger>
                         </ControlTemplate.Triggers>
                     </ControlTemplate>
                 </Setter.Value>
             </Setter>
-            
+
             <Setter Property="Padding" Value="5,5,30,5"/>
             <Setter Property="FontFamily" Value="Global Sans Serif"/>
             <Setter Property="BorderThickness" Value="2"/>
@@ -158,16 +194,16 @@
 
     <Style x:Key="PasswordCompexityRectangle" TargetType="{x:Type Rectangle}">
         <Style.Setters>
-            <Setter Property="Fill" Value="#EBEBEB"/>
+            <Setter Property="Fill" Value="{StaticResource PasswordCompexityRectangle.Static.Fill}"/>
             <Setter Property="Height" Value="14"/>
             <Setter Property="Width" Value="60"/>
-            <Setter Property="Stroke" Value="#C6C6C6"/>
+            <Setter Property="Stroke" Value="{StaticResource PasswordCompexityRectangle.Static.Stroke}"/>
             <Setter Property="VerticalAlignment" Value="Top"/>
             <Setter Property="HorizontalAlignment" Value="Center"/>
             <Setter Property="Visibility" Value="Visible"/>
         </Style.Setters>
     </Style>
-    
+
 
     <Style x:Key="RevealPassword" TargetType="ToggleButton">
         <Style.Setters>
@@ -198,33 +234,15 @@
         </Style.Setters>
     </Style>
 
-    
+
     <Style x:Key="Gradient" TargetType="Rectangle">
         <Style.Setters>
-            <Setter Property="Fill">
-                <Setter.Value>
-                    <LinearGradientBrush StartPoint="0,0" EndPoint="1,0">
-                        <GradientStop Color="#3A1C71" Offset="0"/>
-                        <GradientStop Color="#D76D77" Offset="0.5"/>
-                        <GradientStop Color="#FFAF7B" Offset="1"/>
-                        <!--<GradientStop Color="#6820EB" Offset="0"/>
-                        <GradientStop Color="#1CB5E0" Offset="1"/>-->
-                        
-                    </LinearGradientBrush>
-                </Setter.Value>
+            <Setter Property="Fill" Value="{StaticResource Gradient.Static.Fill}">
             </Setter>
         </Style.Setters>
     </Style>
-    
-    
-    
 
-    <SolidColorBrush x:Key="OptionMark.Static.Background" Color="#FFFFFFFF"/>
-    <SolidColorBrush x:Key="OptionMark.Static.Border" Color="#7289da"/>
-    <SolidColorBrush x:Key="OptionMark.Pressed.Background" Color="#7289da"/>
-    <SolidColorBrush x:Key="OptionMark.Pressed.Border" Color="#7289da"/>
-    <SolidColorBrush x:Key="OptionMark.Pressed.Glyph" Color="White"/>
-    <SolidColorBrush x:Key="OptionMark.Static.Glyph" Color="White"/>
+   
     <Style x:Key="RememberMe" TargetType="{x:Type CheckBox}">
         <Setter Property="Background" Value="{StaticResource OptionMark.Static.Background}"/>
         <Setter Property="BorderBrush" Value="{StaticResource OptionMark.Static.Border}"/>
