--- a/PasswordManagerMainWindow/Auth/Auth.xaml
+++ b/PasswordManagerMainWindow/Auth/Auth.xaml
@@ -37,12 +37,15 @@
                     HorizontalAlignment="Right" 
                     Height="30" Width="30" 
                     Content="&#xE711;" 
-                    Style="{StaticResource CloseApp}"
+                    Style="{StaticResource CloseAppButtonStyle}"
                     Click="CloseWindow"/>
             
         </StackPanel>
         
-        <Rectangle Grid.Column="0" Grid.RowSpan="2" Style="{StaticResource Gradient}">
+        <Rectangle x:Name="GradientRectangle" 
+                   Grid.Column="0" 
+                   Grid.RowSpan="2" 
+                   Style="{StaticResource GradientRectangleStyle}">
             
         </Rectangle>
 
