--- a/PasswordManagerMainWindow/Components/BindablePasswordBox.xaml
+++ b/PasswordManagerMainWindow/Components/BindablePasswordBox.xaml
@@ -7,7 +7,7 @@
              mc:Ignorable="d" 
              d:DesignHeight="450" d:DesignWidth="800">
     <PasswordBox x:Name="passwordBox" 
-                 Style="{StaticResource PswdBoxAuth}"
+                 Style="{StaticResource PasswordBoxStyle}"
         PasswordChanged="PasswordBox_PasswordChanged"
                  />
 </UserControl>
