bug fixes at signup.xaml

--- a/PasswordManagerMainWindow/App.xaml
+++ b/PasswordManagerMainWindow/App.xaml
@@ -6,6 +6,7 @@
         <ResourceDictionary>
             <ResourceDictionary.MergedDictionaries>
                 <ResourceDictionary Source="Auth/AuthStyles.xaml" />
+                <ResourceDictionary Source="ColorTheme.xaml" x:Name="white" />
             </ResourceDictionary.MergedDictionaries>
         </ResourceDictionary>
     </Application.Resources>
