--- a/PasswordManagerMainWindow/App.xaml
+++ b/PasswordManagerMainWindow/App.xaml
@@ -6,7 +6,7 @@
         <ResourceDictionary>
             <ResourceDictionary.MergedDictionaries>
                 <ResourceDictionary Source="Auth/AuthStyles.xaml" />
-                <ResourceDictionary Source="ColorTheme.xaml" x:Name="white" />
+                <ResourceDictionary Source="Themes/WhiteTheme.xaml"/>
             </ResourceDictionary.MergedDictionaries>
         </ResourceDictionary>
     </Application.Resources>
