--- a/PasswordManagerMainWindow/Auth/Login.xaml
+++ b/PasswordManagerMainWindow/Auth/Login.xaml
@@ -10,8 +10,10 @@
       d:DesignHeight="520" 
       d:DesignWidth="500"
       Title="Login"
-      Background="White"
-      ShowsNavigationUI="False">
+      Background="{DynamicResource MainColor}"
+      ShowsNavigationUI="False"
+      Foreground="{DynamicResource TextColor}"
+      >
 
     <Grid>
         <Grid.RowDefinitions>
@@ -41,7 +43,8 @@
                    Grid.ColumnSpan="2"
                    Grid.RowSpan="2"
                    HorizontalAlignment="Right" 
-                   FontSize="14" Margin="0,32,20,32">
+                   FontSize="14" Margin="0,32,20,32"
+                   >
             <Hyperlink x:Name="CreateAccountHyperLink" 
                        NavigateUri="Signup.xaml" 
                        Foreground="#7289da"
@@ -59,9 +62,10 @@
                    HorizontalAlignment="Left" 
                    VerticalAlignment="Center" 
                    FontSize="28" 
-                   Foreground="Black"
+                   
                    FontFamily="Global Sans Serif" 
-                   FontWeight="Bold"/>
+                   FontWeight="Bold"
+                   />
 
         <TextBlock Text="{x:Static res:Resources.LoginRequest}"
                    Grid.Column="1" 
@@ -69,7 +73,6 @@
                    HorizontalAlignment="Left" 
                    VerticalAlignment="Center" 
                    FontSize="14" 
-                   Foreground="SlateGray"
                    FontFamily="Global Sans Serif" 
                    FontWeight="Bold"/>
 
@@ -79,7 +82,6 @@
                    HorizontalAlignment="Left" 
                    VerticalAlignment="Center" 
                    FontSize="14" 
-                   Foreground="Black"
                    FontFamily="Global Sans Serif" 
                    FontWeight="Bold"/>
 
@@ -96,7 +98,6 @@
                    HorizontalAlignment="Left" 
                    VerticalAlignment="Center" 
                    FontSize="14" 
-                   Foreground="Black"
                    FontFamily="Global Sans Serif" 
                    FontWeight="Bold"/>
 
