--- a/PasswordManagerMainWindow/Themes/DarkTheme.xaml
+++ b/PasswordManagerMainWindow/Themes/DarkTheme.xaml
@@ -1,4 +1,57 @@
 ﻿<ResourceDictionary xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
-                    xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml">
+                    xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+                    xmlns:system="clr-namespace:System;assembly=mscorlib"
+                    >
+
+    <SolidColorBrush x:Key="MainColor" Color="#2c2f33"></SolidColorBrush>
+    <SolidColorBrush x:Key="TextColor" Color="White"/>
     
+    <Color x:Key="CloseAppButton.Static.Background">Transparent</Color>
+    <Color x:Key="CloseAppButton.IsMouseOver.Background">#50585E</Color>
+    <Color x:Key="CloseAppButton.IsPressed.Background" >#7289da</Color>
+    
+
+    <Color x:Key="AuthErrorTextBlock.Static.Foreground" >Red</Color>
+
+    <Color x:Key="SubmitButton.Static.Background" >#7289da</Color>
+    <Color x:Key="SubmitButton.IsPressed.Background" >#99aab5</Color>
+    <Color x:Key="SubmitButton.Text.Foreground" >White</Color>
+
+    <Color x:Key="EmailTextBox.Static.Border.Background" >#2c2f33</Color>
+    <Color x:Key="EmailTextBox.Static.Border.BorderBrush" >LightGray</Color>
+    <Color x:Key="EmailTextBox.IsMouseOver.Border.BorderBrush" >LightGray</Color>
+    <Color x:Key="EmailTextBox.IsFocused.Border.BorderBrush" >#7289da</Color>
+    <Color x:Key="EmailTextBox.Static.BorderBrush" >LightGray</Color>
+
+    <Color x:Key="PasswordBox.Static.Border.Background" >#2c2f33</Color>
+    <Color x:Key="PasswordBox.Static.Border.BorderBrush" >LightGray</Color>
+    <Color x:Key="PasswordBox.IsMouseOver.Border.BorderBrush" >LightGray</Color>
+    <Color x:Key="PasswordBox.IsFocused.Border.BorderBrush" >#7289da</Color>
+    <Color x:Key="PasswordBox.Static.BorderBrush" >LightGray</Color>
+
+    <Color x:Key="PasswordCompexityRectangle.Static.Fill" >#292C30</Color>
+    <Color x:Key="PasswordCompexityRectangle.Static.Stroke" >#23272A</Color>
+    <Color x:Key="_veryWeakPasswordRectangleColor">#FF0000</Color>
+    <Color x:Key="_weakPasswordRectangleColor">#DB7A19</Color>
+    <Color x:Key="_normalPasswordRectangleColor">#F1DD1A</Color>
+    <Color x:Key="_strongPasswordRectangleColor">#9CF11A</Color>
+    <Color x:Key="_veryStrongPasswordRectangleColor">#05C612</Color>
+    
+
+    <Color x:Key="GradientStop1">#3B547F</Color>
+    <Color x:Key="GradientStop2">#394861</Color>
+    <Color x:Key="GradientStop3">#373B44</Color>
+
+
+    <Color x:Key="RememberMeCheckBox.Static.Background" >#2c2f33</Color>
+    <Color x:Key="RememberMeCheckBox.Grid.Static.Background" >Transparent</Color>
+    <Color x:Key="RememberMeCheckBox.Static.Border" >#7289da</Color>
+    <Color x:Key="RememberMeCheckBox.Pressed.Background" >#7289da</Color>
+    <Color x:Key="RememberMeCheckBox.Pressed.Border" >#7289da</Color>
+    <Color x:Key="RememberMeCheckBox.Pressed.Glyph" >White</Color>
+    <Color x:Key="RememberMeCheckBox.Static.Glyph" >White</Color>
+    <Color x:Key="RememberMeCheckBox.Foreground" >White</Color>
+
+    <ImageSource x:Key="ClosedEye">/Auth/Assets/closed_eye_white.png</ImageSource>
+    <ImageSource x:Key="OpenEye">/Auth/Assets/eye_white.png</ImageSource>
 </ResourceDictionary>
