--- a/PasswordManagerMainWindow/Themes/WhiteTheme.xaml
+++ b/PasswordManagerMainWindow/Themes/WhiteTheme.xaml
@@ -1,6 +1,11 @@
 ﻿<ResourceDictionary xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
-                    xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml">
-    <Color x:Key="BackGroundColor">White</Color>
+                    xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml" xmlns:system="clr-namespace:System;assembly=mscorlib">
+    
+    
+    <SolidColorBrush x:Key="MainColor" Color="White"></SolidColorBrush>
+    <SolidColorBrush x:Key="TextColor" Color="Black"/>
+
+
     <Color x:Key="CloseAppButton.Static.Background">Transparent</Color>
     <Color x:Key="CloseAppButton.IsMouseOver.Background">#99aab5</Color>
     <Color x:Key="CloseAppButton.IsPressed.Background" >#7289da</Color>
@@ -25,6 +30,11 @@
 
     <Color x:Key="PasswordCompexityRectangle.Static.Fill" >#EBEBEB</Color>
     <Color x:Key="PasswordCompexityRectangle.Static.Stroke" >#C6C6C6</Color>
+    <Color x:Key="_veryWeakPasswordRectangleColor">#FF0000</Color>
+    <Color x:Key="_weakPasswordRectangleColor">#DB7A19</Color>
+    <Color x:Key="_normalPasswordRectangleColor">#F1DD1A</Color>
+    <Color x:Key="_strongPasswordRectangleColor">#9CF11A</Color>
+    <Color x:Key="_veryStrongPasswordRectangleColor">#05C612</Color>
 
     <Color x:Key="GradientStop1">#2980B9</Color>
     <Color x:Key="GradientStop2">#6DD5FA</Color>
@@ -38,5 +48,10 @@
     <Color x:Key="RememberMeCheckBox.Pressed.Border" >#7289da</Color>
     <Color x:Key="RememberMeCheckBox.Pressed.Glyph" >White</Color>
     <Color x:Key="RememberMeCheckBox.Static.Glyph" >White</Color>
+    <Color x:Key="RememberMeCheckBox.Foreground" >Black</Color>
 
+
+    <ImageSource x:Key="ClosedEye">/Auth/Assets/closed_eye.png</ImageSource>
+    <ImageSource x:Key="OpenEye">/Auth/Assets/eye.png</ImageSource>
+    
 </ResourceDictionary>
