--- a/PasswordManagerMainWindow/Auth/Login.xaml
+++ b/PasswordManagerMainWindow/Auth/Login.xaml
@@ -12,8 +12,7 @@
       Title="Login"
       Background="{DynamicResource MainColor}"
       ShowsNavigationUI="False"
-      Foreground="{DynamicResource TextColor}"
-      >
+      Foreground="{DynamicResource TextColor}">
 
     <Grid>
         <Grid.RowDefinitions>
@@ -43,8 +42,7 @@
                    Grid.ColumnSpan="2"
                    Grid.RowSpan="2"
                    HorizontalAlignment="Right" 
-                   FontSize="14" Margin="0,32,20,32"
-                   >
+                   FontSize="14" Margin="0,32,20,32">
             <Hyperlink x:Name="CreateAccountHyperLink" 
                        NavigateUri="Signup.xaml" 
                        Foreground="#7289da"
