--- a/PasswordManagerMainWindow/Auth/PasswordReset.xaml
+++ b/PasswordManagerMainWindow/Auth/PasswordReset.xaml
@@ -14,15 +14,21 @@
 
     <Grid>
         <Grid.RowDefinitions>
-        <RowDefinition Height="40"/>
-        <RowDefinition Height="40"/>
-        <RowDefinition Height="30"/>
-        <RowDefinition Height="20"/>
-        <RowDefinition Height="30"/>
-        <RowDefinition Height="50"/>
-        <RowDefinition Height="20"/>
-        <RowDefinition Height="50"/>
-        <RowDefinition Height="Auto"/>
+            <RowDefinition Height="40"/>
+            <RowDefinition Height="40"/>
+            <RowDefinition Height="30"/>
+            <RowDefinition Height="20"/>
+            <RowDefinition Height="35"/>
+            <RowDefinition Height="30"/>
+            <RowDefinition Height="50"/>
+            <RowDefinition Height="10"/>
+            <RowDefinition Height="30"/>
+            <RowDefinition Height="50"/>
+            <RowDefinition Height="10"/>
+            <RowDefinition Height="30"/>
+            <RowDefinition Height="50"/>
+            <RowDefinition Height="40"/>
+            <RowDefinition Height="Auto"/>
         </Grid.RowDefinitions>
         <Grid.ColumnDefinitions>
             <ColumnDefinition Width="85"/>
@@ -45,19 +51,108 @@
                    FontFamily="Global Sans Serif" 
                    FontWeight="Bold"
                    />
-        <TextBox x:Name="SixDigitsTextBox" Grid.Row="5" 
+        <TextBlock Text="{x:Static res:Resources.PasswordResetEmail}"
+                   Grid.Row="5" 
+                   Grid.Column="1"
+                   HorizontalAlignment="Left" 
+                   VerticalAlignment="Center" 
+                   FontSize="14" 
+                   FontFamily="Global Sans Serif" 
+                   FontWeight="Bold"/>
+
+        <TextBox x:Name="EmailTextBox" 
+                 Grid.Row="6" 
                  Grid.Column="1" 
                  BorderThickness="2" 
                  Height="40"
                  Style="{StaticResource EmailTextBoxStyle}"/>
 
+        <TextBlock Text="{x:Static res:Resources.PasswordResetCode}"
+                   Grid.Row="8" 
+                   Grid.Column="1"
+                   HorizontalAlignment="Left" 
+                   VerticalAlignment="Center" 
+                   FontSize="14" 
+                   FontFamily="Global Sans Serif" 
+                   FontWeight="Bold"/>
+
+        <TextBox x:Name="CodeTextBox" 
+                 Grid.Row="9" 
+                 Grid.Column="1" 
+                 BorderThickness="2" 
+                 Height="40"
+                 Style="{StaticResource EmailTextBoxStyle}"/>
+        
+        <TextBlock Text="{x:Static res:Resources.PasswordResetNewPassword}"
+                   Grid.Row="11" 
+                   Grid.Column="1"
+                   HorizontalAlignment="Left" 
+                   VerticalAlignment="Center" 
+                   FontSize="14" 
+                   FontFamily="Global Sans Serif" 
+                   FontWeight="Bold"/>
+
+        <TextBox x:Name="NewPasswordTextBox" 
+                 Grid.Row="12" 
+                 Grid.Column="1" 
+                 BorderThickness="2" 
+                 Height="40"
+                 Style="{StaticResource EmailTextBoxStyle}"/>
+
+        <StackPanel 
+                    Grid.Row="13" 
+                    Grid.Column="1">
+            <DockPanel x:Name="PasswordComplexityPanel">
+                <Rectangle x:Name="VeryWeakPasswordRectangle"
+                           Style="{StaticResource PasswordCompexityRectangleStyle}"
+                           Margin="2,0"/>
+                <Rectangle x:Name="WeakPasswordRectangle"
+                           Margin="6,0" 
+                           Style="{StaticResource PasswordCompexityRectangleStyle}"/>
+                <Rectangle x:Name="NormalPasswordRectangle"
+                           Style="{StaticResource PasswordCompexityRectangleStyle}"/>
+                <Rectangle x:Name="StrongPasswordRectangle"
+                           Margin="6,0" 
+                           Style="{StaticResource PasswordCompexityRectangleStyle}"/>
+                <Rectangle x:Name="VeryStrongPasswordRectangle"
+                           Style="{StaticResource PasswordCompexityRectangleStyle}"/>
+            </DockPanel>
+
+            <TextBlock x:Name="PasswordComplexityTextBlock"
+                       TextWrapping="Wrap" 
+                       Text=""
+                       HorizontalAlignment="Center"
+                       Margin="0,5,0,0"
+                       FontSize="14"
+                       Width="205" 
+                       TextAlignment="Center"/>
+        </StackPanel>
+
         <Button x:Name="Submit" Grid.Column="1"
-            Grid.Row="7"
+            Grid.Row="14"
             Content="{x:Static res:Resources.PasswordResetConfirm}"
-                HorizontalAlignment="Center"
+                HorizontalAlignment="Right"
                 Width="160"
                 Height="50" 
                 Style="{StaticResource SubmitButtonStyle}" 
                 />
+        <TextBlock x:Name="BackTextBlock"
+                   Grid.Row="14" 
+                   Grid.Column="1"
+                   HorizontalAlignment="Left" 
+                   VerticalAlignment="Center"
+                   FontSize="14" 
+                   >
+            
+            <Hyperlink x:Name="LogInHyperLink"
+                       NavigateUri="Login.xaml" 
+                       Foreground="#7289da"
+                       FontFamily="Global Sans Serif" 
+                       FontWeight="Bold" 
+                       TextDecorations="{x:Null}">
+                <Run Text="{x:Static res:Resources.PasswordResetBack}"/>
+            </Hyperlink>
+
+        </TextBlock>
     </Grid>
 </Page>
